fix: make sure height is good and style scrollbar

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -68,3 +68,21 @@
     src: url("./assets/GeistMonoVariableVF.woff2") format("woff");
   }
 }
+
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    @apply h-2 w-2;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    @apply rounded-full bg-muted;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    @apply rounded-full bg-foreground;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    @apply bg-foreground;
+  }
+}
